src/less/core/icon.less
// Name:            Icon
// Description:     Component to create icons
//
// Component:       `uk-icon`
//
// Sub-objects:     `uk-icon-button`
//
// Modifiers:       `uk-icon-image`
//                  `uk-icon-hover`

//
// ========================================================================


// Variables
// ========================================================================

@icon-image-size:                               20px;

@icon-hover-color:                              @global-muted-color;
@icon-hover-hover-color:                        @global-color;

@icon-button-size:                              36px;
@icon-button-border-radius:                     100%;
@icon-button-background:                        @global-muted-background;
@icon-button-color:                             @global-muted-color;

@icon-button-hover-background:                  darken(@icon-button-background, 5%);
@icon-button-hover-color:                       @global-color;

@icon-button-active-background:                 darken(@icon-button-background, 10%);
@icon-button-active-color:                      @global-color;


/* ========================================================================
   Component: Icon
 ========================================================================== */

/*
 * `background-image` is used to pass the image path to JS
 */

[uk-icon] { background-image: url("@{global-image-path}/icons.svg"); }

/*
 * 1. Let the SVG color use the current text color
 * 2. Alignment
 */

.uk-icon {
    display: inline-block;
    /* 1 */
    fill: currentcolor;
    /* 2 */
    vertical-align: middle;
}


/* Image modifier
 ========================================================================== */

/*
 * Display images in icon dimensions
 */

.uk-icon-image {
    width: @icon-image-size;
    height: @icon-image-size;
    background-position: 50 %50%;
    background-repeat: no-repeat;
    background-size: contain;
}


/* Hover modifier
 ========================================================================== */

.uk-icon-hover {
    color: @icon-hover-color;
    .hook-icon-hover;
}

.uk-icon-hover:hover,
.uk-icon-hover:focus {
    color: @icon-hover-hover-color;
    .hook-icon-hover-hover;
}


/* Button
 ========================================================================== */

/*
 * 1. Center icon vertically and horizontally
 */

.uk-icon-button {
    box-sizing: border-box;
    width: @icon-button-size;
    height: @icon-button-size;
    border-radius: @icon-button-border-radius;
    background: @icon-button-background;
    color: @icon-button-color;
    vertical-align: middle;
    /* 1 */
    display: -ms-inline-flexbox;
    display: -webkit-inline-flex;
    display: inline-flex;
    -ms-flex-pack: center;
    -webkit-justify-content: center;
    justify-content: center;
    -ms-flex-align: center;
    -webkit-align-items: center;
    align-items: center;
    .hook-icon-button;
}

/* Hover + Focus */
.uk-icon-button:hover,
.uk-icon-button:focus {
    background-color: @icon-button-hover-background;
    color: @icon-button-hover-color;
    outline: none;
    .hook-icon-button-hover;
}

/* Active */
.uk-icon-button:active {
    background-color: @icon-button-active-background;
    color: @icon-button-active-color;
    .hook-icon-button-active;
}


// Hooks
// ========================================================================

.hook-icon-misc;

.hook-icon-hover() {}
.hook-icon-hover-hover() {}
.hook-icon-button() {}
.hook-icon-button-hover() {}
.hook-icon-button-active() {}
.hook-icon-misc() {}

